# brightfield-organoid-analyzer

./: README.md  analyze_code.py  organoid_analyzer.py  pyproject.toml  requirements.txt
src/organoid_analyzer/: organoid_analyzer.py
