[project]
name = "organoid-analyzer"
version = "0.1.0"
description = "Analyze brightfield images of organoids"
readme = "README.md"
authors = [
    { name = "Jian Wei Tay", email = "jian.tay@vai.org" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
